added solution to previous challenge

--- a/29-emoji-slot-machine/index.html
+++ b/29-emoji-slot-machine/index.html
@@ -5,17 +5,7 @@
   </head>
   <body>
     <div class="container">
-      <ul class="emoji-slots-game">
-        <li>🍇</li>
-        <li>🥝</li>
-        <li>🍓</li>
-        <li>🍇</li>
-        <li>🥝</li>
-        <li>🍓</li>
-        <li>🍇</li>
-        <li>🥝</li>
-        <li>🍓</li>
-      </ul>
+      <ul class="emoji-slots-game"></ul>
     </div>
     <script src="index.js"></script>
   </body>
